# supersonic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
cmake/: FindJack.cmake
jupyter/: air_drift_play.pkl  air_drift_record.pkl  air_flip_play.pkl  air_flip_record.pkl  ask.ipynb  chirp.ipynb  cofdm.ipynb  debug.ipynb  diff.ipynb  diff.py  find_best.ipynb  frame.ipynb  freq_amp.ipynb  fsk.ipynb  learn_fft.ipynb  mdiff.py  ofdm.ipynb  psk.ipynb  report.ipynb  report_draw.ipynb  requirements.txt  rs.ipynb  show_wave.ipynb  signal_basics.ipynb  skew.ipynb  utils.py  wave_playground.ipynb
note/: project1.md  project3_4.md
note/project2/: task1.md  task2.md  task3.md
report/: air_drift.pgf  air_flip.pgf  ask.pgf  chirp.pgf  fsk.pgf  line_latency.pgf  main.tex
supersonic/: CMakeLists.txt  ask.h  chirp.h  config.cpp  config.h  crc.cpp  crc.h  fsk.h  hamming.h  log.h  mac.h  magic.h  modulator.h  ofdm.h  p1t2.cpp  phy.h  play_and_record.cpp  proj0.cpp  proj1.cpp  proj2.cpp  proj3.cpp  psk.h  rs.h  saudio.cpp  sendrecv.cpp  sinwave.cpp  smac.cpp  supersonic.cpp  supersonic.h  tun.cpp  tun.h  unittest.cpp  utils.h
